force-app/main/default/objects/Restaurant__c/fields/Days_Since_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Visit__c</fullName>
    <formula>TODAY() - Last_Visited_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>