force-app/main/default/objects/Restaurant__c/fields/Liked_By__c.field-meta.xml
<CustomField>
    <fullName>Liked_By__c</fullName>
    <label>Liked By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>People</valueSetName>
    </valueSet>
</CustomField>