force-app/main/default/objects/Restaurant__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;10</fullName>
            </value>
            <value>
                <fullName>&lt;10</fullName>
            </value>
            <value>
                <fullName>15+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>