force-app/main/default/objects/Restaurant__c/fields/Revisitability__c.field-meta.xml
<CustomField>
    <fullName>Revisitability__c</fullName>
    <label>Revisitability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whenever</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>