force-app/main/default/objects/Restaurant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Wait_Time__c</columns>
    <columns>Liked_By__c</columns>
    <columns>Disliked_By__c</columns>
    <columns>Price__c</columns>
    <columns>Revisitability__c</columns>
    <columns>Last_Visited_Date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>